@@ -22,6 +22,7 @@ extern int  _GMP_is_prime(mpz_t n);
 extern int  _GMP_is_prob_prime(mpz_t n);
 extern int  _GMP_is_provable_prime(mpz_t n, char ** prooftext);
 extern int  _GMP_is_aks_prime(mpz_t n);
+extern int  _GMP_BPSW(mpz_t n);
 extern void _GMP_next_prime(mpz_t n);
 extern void _GMP_prev_prime(mpz_t n);
 
